# daily_practise

./: .gitignore  goland使用手顺.doc  plan.txt  多线程编程.md  并行编程.emmx  日常疑问点.txt
Ring-Log-NoLoseData/: CMakeLists.txt
Ring-Log-NoLoseData/src/: rlog.cc  rlog.h
Ring-Log-NoLoseData/tool/: flusher.cc
SGI-STL-master/sgi_stl.si4project/: sgi_stl.SearchResults  sgi_stl.sip_sym  sgi_stl.sip_xab  sgi_stl.sip_xad  sgi_stl.sip_xc  sgi_stl.sip_xf  sgi_stl.sip_xm  sgi_stl.sip_xr  sgi_stl.sip_xsb  sgi_stl.sip_xsd  sgi_stl.siproj  sgi_stl.siproj_settings.xml  sgi_stl.siwork
STL_alg/: CMakeLists.txt  Variable_parameter.cpp  a.out  algorithmUnity.h  core  main.cpp  myalloc.h  remove.cpp  test.cpp  test.h  unity_head.h
algorithm_practice/: CMakeLists.txt
apue.3e/: CMakeLists.txt
apue.3e/fileio/: fileflags.c
c++11_learn/: CMakeLists.txt  container.cpp  move_semantic.cpp  smart_ptr.cpp  standard_shared_ptr.cpp
c++11_learn/chapter_2/: test.cpp
cmake_learn/: CMakeLists.txt
cmake_learn/Tmath/: CMakeLists.txt  Tmath.cpp  Tmath.h
cmake_learn/include/: mylib.h
cmake_learn/libSrc/: CMakeLists.txt  mylib.cpp
cmake_learn/src/: CMakeLists.txt  main.cpp
cmake_learn/test/: CMakeLists.txt  test.cpp
design_mode/: CMakeLists.txt
design_mode/Component_collaboration/observer/: FileSplitter2.h
design_mode/Component_collaboration/observer/test/: head.h  master.h  new_observer.cpp  observer.cpp
design_mode/Component_collaboration/strategy/: strategy1.cpp
design_mode/Component_collaboration/template_method/: template1_lib.h  template2_lib.h
design_mode/Single_responsibility/brigde/: bridge2.cpp
design_mode/Single_responsibility/decorator/: decorator1.cpp
design_pattern/: CMakeLists.txt
design_pattern/Component_collaboration/observer/: FileSplitter2.h  MainForm1.cpp  MainForm2.cpp
design_pattern/Component_collaboration/observer/test/: head.h
design_pattern/Component_collaboration/strategy/: strategy2.cpp
design_pattern/Component_collaboration/template_method/: template1_app.cpp  template2_app.cpp
design_pattern/Object_create/abstract_factory/: EmployeeDAO1.cpp  EmployeeDAO2.cpp  EmployeeDAO3.cpp  head.h
design_pattern/Object_create/builder/: builder.cpp
design_pattern/Object_create/factory_method/: FileSplitter1.cpp  FileSplitter2.cpp  ISplitterFactory.cpp  MainForm1.cpp  MainForm2.cpp  head.h
design_pattern/Object_create/prototype/: Client.cpp
design_pattern/Object_performance/flyweight/: flyweight.cpp
design_pattern/Single_responsibility/brigde/: bridge1.cpp  bridge2.cpp
design_pattern/Single_responsibility/decorator/: decorator1.cpp  decorator2.cpp  decorator3.cpp
design_pattern/Status_change/memento/: memento.cpp
design_pattern/Status_change/status/: state2.cpp
doc/: STL.emmx  ar命令.doc  c++11.doc  cmake.doc  dmesg.doc  gcc编译过程.doc  git.doc  git.txt  go环境配置安装.doc  lambda.doc  ldd.doc  linux下头文件及库的搜索路径.doc  linux下头文件及库的搜索路径及pkg-config.doc  linux常用工具命令.doc  linux库.doc  linux根文件系统各目录详解.doc  mysql.emmx  mysql_bak1.emmx  mysql_index.emmx  mysql分区分表.doc  mysql常用命令.doc  note.txt  note.txt - 快捷方式.lnk  oracle sql.txt  plan.txt  question_set.doc  shell.doc  summarize experience.doc  template.doc  top工具输出.doc  ubuntu创建网络共享文件夹.txt  仿函数.doc  听课.txt  四种cast.doc  好的文档链接.txt  技术栈.emmx  新建 DOC 文档.doc  日常总结.doc  标准输入标准输出.doc  标准输入输出.doc  (+4 more)
doc/c_memory_management/: 内存管理.emmx
doc/mysql/: 1000行mysql.txt  innodb lock.doc  innodb_index_2.emmx  mysql explain.doc  mysql.emmx  mysql_bak1.emmx  mysql_bak2.emmx  mysql_index.emmx  mysql_slow_log.doc  mysql基础知识.docx  mysql常用命令.doc  sql_command.md  sql_command.txt  sql_command_sunday.txt  sql样例.txt  variadic_template.doc  内存.emmx  周末在家.emmx  索引总结.emmx  锁.emmx
doc/mysql_new/: mysql.docx
doc/系统/: dpkg.doc  grep.doc  linux real_user_sys .txt  linux下头文件及库的搜索路径及pkg-config.doc  linux常用工具命令.doc  linux程序的进程内存空间+static关键字.doc  linux系统日志及分析.doc  ps命令输出参数.doc  strace工具.doc  valgrind.doc
doc/编程/: __attribute__.doc  assert.doc  c++union.doc  cmake.doc  const.doc  core_dump.docx  extern.doc  gcc编译过程.doc  inline函数.docx  move语义.doc  new.doc  operator实现的强制类型转换.doc  stl.doc  template.doc  typename.doc  云算符重载.txt  列表初始化.doc  友元函数friend.doc  可变参数.doc  四种cast.doc  并发编程.doc  模板的注意.doc  虚继承.doc
doc/设计模式/: 单例模式.doc  设计模式总结.emmx
go_learn/: go.mod  go.sum
go_learn/github_mail_client/: github_mail_client.go
go_learn/mail_server/: mail_server.go
go_learn/test_test/: ch_test.go
go_new_learn/: main.go
golang_learn/: go.mod  go.sum
golang_learn/ch1/: main.go
mysql_uuid/: CMakeLists.txt  Makefile_bak
mysql_uuid/doc/: note.txt
mysql_uuid/include/mysql/: my_config.h  mysql.h
mysql_uuid/json/: CMakeLists.txt  json_value.cpp
mysql_uuid/lib/mysql/: libmysqlclient.so.20
mysql_uuid/src/: DB_tools.cpp  DB_tools.h  MySQL_DB.cpp  MySQL_DB.h  _c_dbTask_sqlOper.cpp  _c_dbTask_sqlOper.h  baseTool.cpp  baseTool.h  common.h  main.cpp
mysql_uuid/test/: a.out  aliansTemplate  aliansTemplate.cpp  depthCpp11  depthCpp11.cpp  initialization_test  initialization_test.cpp  left_right_value_test  left_right_value_test.cpp  move_constructor.cpp  move_constructor_test  move_constructor_test.cpp  move_test  move_test.cpp  raw_string_test  raw_string_test.cpp  test  test1  test1.cpp  time_interval.h  time_interval_test  time_interval_test.cpp  time_test  time_test.cpp  trivilItem.cpp  variadic_template  variadic_template.cpp  vector_test.cpp  vector_test_learn  vector_test_learn.cpp
mysql_uuid/test/lesson/: cpp_actual_combat  cpp_actual_combat.cpp
mysql_uuid/test/memleak/: test  test1.cpp
net_learn/: CMakeLists.txt  test.cpp
programming_learn/: CMakeLists.txt  MString.cpp  cpp_mem_management.cpp  dailyTest.cpp  fileOperation  fileOperation.cpp  fileTest  friend_learn.cpp  initializer_list_learn.cpp  linkByArry.cpp  listByArry.cpp  noMutexQueue.cpp  open_1_new.txt  public_private.cpp  renameFile  renameFile.cpp  share_file_write.cpp  singleton.cpp  singleton_magic_static.cpp  smart_ptr.cpp  string_ref_count.cpp  test.md  test_macro.cpp  test_macro_and_noLock.cpp  testtest  testtest.cpp  virtual_inherit.cpp
stable_version/: CMakeLists.txt
(+642 files in other folders)
