INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Tmath)

AUX_SOURCE_DIRECTORY(. DIR_SRC_SRCS)

LINK_DIRECTORIES(../libs)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_EXECUTABLE(myTest ${DIR_SRC_SRCS})

MESSAGE("src ++++++++")
MESSAGE(${PROJECT_SOURCE_DIR})

TARGET_LINK_LIBRARIES(myTest Tmath)
TARGET_LINK_LIBRARIES(myTest mylib)
