CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(main_exec)

#添加头文件搜索路径
INCLUDE_DIRECTORIES(../include)

AUX_SOURCE_DIRECTORY(. TEST_SRCS)
#添加库文件搜索路径
LINK_DIRECTORIES(../libs)

MESSAGE("test ++++++++")
MESSAGE(${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(demoTest ${TEST_SRCS})

TARGET_LINK_LIBRARIES(demoTest mylib)